# venom

./: .gitignore  2  Cargo.toml  README.md  config.yaml
design/: Glossary.md
design/.obsidian/: graph.json  types.json  workspace.json
design/Definitions/: Actors.md  Bounded Contexts.md  Context map.md  Flow.canvas
design/Definitions/Aggregates/: Binding.md  BindingOrchestratorActor.md  Collection.md  Component.md  Execution Context.md  Vulnerability.md
design/Definitions/actors/: BindingActor.md  BindingOrchestratorActor.md  CollectionActor.md  ComponentActor.md  ExecutionContextActor.md  ReportingActor.md  SbomGeneratorActor.md  VulnerabilityCatalogActor.md
design/actors/command/: Assign Execution Context.md  Assign Sbom.md  Create Collection.md  Register Component.md  Register Managed Vulnerability.md  Replace Execution Context.md
design/glossary/aggregate/: Collection.md  Component.md  Managed Vulnerability.md
design/glossary/command/: Deprecate Component.md  Reclassify Managed Vulnerability.md
design/glossary/entity/: Vulnerability.md
design/glossary/event/: Collection Created.md  Component Deprecated.md  Component Registered.md  Execution Context Assigned.md  Execution Context Replaced.md  Managed Vulnerability Classification Inherited.md  Managed Vulnerability Classification Outdated.md  Managed Vulnerability Classified.md  Sbom Assigned.md  (+3 more)
sboms/docker.io/: nginx_latest_sbom.json  redis_latest_sbom.json
src/: config.rs  lib.rs  main.rs
src/api/: controller.rs
src/application/: mod.rs
src/domain/: mod.rs
src/infrastructure/: mod.rs
(+47 files in other folders)
