[package]
name = "venom"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-rt = "2.10"
actix-web = "4.11"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", feature = ["full"] }
reqwest = { version = "0.12", feature = ["blocking", "json" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] } # to configure logging format and subscribers
thiserror = "2.0"
config = "0.15"
url = "2.5"
